<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MPOS Viewer</string>

    <!--  activities titles -->
    <string name="account_management_activity_title">Account Management</string>
    <string name="account_view_activity_title">MPOS Viewer</string>
    <string name="settings_activity_title">MPOS Viewer Settings</string>

    <!-- accounts management -->
    <string name="accounts_management_action_add">Add</string>
    <string name="accounts_management_action_settings">Settings</string>
    <string name="accounts_management_context_action_remove">Remove</string>
    <string name="accounts_management_unknown_qr_toast">Scanned code doesn\'t contain any MPOS account</string>
    <string name="accounts_management_account_already_added">The account is already added</string>
    <string name="accounts_management_account_added">Account successfully added</string>
    <string name="accounts_management_account_add_failed">Failed to add account</string>

    <!-- tabs -->
    <string name="account_info_tab_dashboard">Dashboard</string>
    <string name="account_info_tab_workers">Workers</string>
    <string name="account_info_tab_general_stats">General stats</string>

    <!-- account info -->
    <string name="account_info_action_refresh">Refresh</string>
    <string name="account_info_action_exit">Exit</string>

    <!-- dashboard -->
    <string name="dashboard_overview_label">OVERVIEW</string>
    <string name="dashboard_your_hashrate">Your hashrate:</string>
    <string name="dashboard_your_sharerate">Your sharerate:</string>
    <string name="dashboard_pool_hashrate">Pool hashrate:</string>
    <string name="dashboard_net_hashrate">Net hashrate:</string>
    <string name="dashboard_balance_label">BALANCE</string>
    <string name="dashboard_balance_confirmed">Confirmed:</string>
    <string name="dashboard_balance_unconfirmed">Unconfirmed:</string>

    <!-- workers -->
    <string name="worker_username">Username:</string>
    <string name="worker_password">Password:</string>
    <string name="worker_difficulty">Difficulty:</string>
    <string name="worker_hashrate">Hashrate:</string>

    <!-- general stats -->
    <string name="gen_stats_pool_hashrate">Pool Hash Rate</string>
    <string name="gen_stats_pool_efficiency">Pool Efficiency</string>
    <string name="gen_stats_active_workers">Current Active Workers</string>
    <string name="gen_stats_next_block">Next Network Block</string>
    <string name="gen_stats_last_block_found">Last Block Found</string>
    <string name="gen_stats_difficulty">Difficulty</string>
    <string name="gen_stats_est_avg_time_per_round_pool">Est. Avg. Time Per Round (Pool)</string>
    <string name="gen_stats_est_shares_this_round">Est. Shares This Round</string>
    <string name="gen_stats_time_since_last_block">Time Since Last Block</string>

    <!-- common errors -->
    <string name="error_network_unavailable">Internet is currently unavailable. Please turn it on and try again.</string>
    <string name="error_failed_to_load_try_again">Failed to load data. Please try again later.</string>
    <string name="error_partially_failed_to_load_try_again">Data has been loaded partially due to unknown network or server issues. Please try again later.</string>

    <!-- common messages -->
    <string name="message_loading_please_wait_title">Loading&#8230;</string>
    <string name="message_loading_please_wait_body">Please wait.</string>
    <string name="message_refreshing">Refreshing&#8230;</string>

    <!-- measures -->
    <string name="measure_khash_per_s">kH/s</string>
    <string name="measure_ghash_per_s">GH/s</string>
    <string name="measure_share_per_s">share/s</string>

    <!-- formats -->
    <string name="format_time_secs">%d sec</string>
    <string name="format_time_mins_secs">%1$d min %2$d sec</string>

    <!-- settings -->
    <string name="setting_trust_all_ssl_certs_title">Trust all SSL certificates</string>
    <string name="setting_trust_all_ssl_certs_summary">Check if you\'d like to trust all HTTPS hosts even they aren\'t trusted by default</string>
</resources>
